--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'War -- Economic aspects'
 - !lcsh 'Profiteering'
 - !lcc 'HB'
+- GITenberg
 title: 'The World in Chains: Some Aspects of War and Trade'
 url: http://www.gutenberg.org/ebooks/20435
